Enh 37387065 - [37381796->25.03] Topics: general refactoring and hardening (merge main -> ce/main 113425)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 113428]